# BPFGM

./: CMakeLists.txt  ProvideDatasetComplex.cpp  ProvideDatasetTrivial.cpp  README.md  main.cpp
kalign/src/: .dir-locals.el  Makefile  Makefile.hn  Makefile.hn3  align_io.c  align_io.h  alignment.c  alignment.h  alignment_parameters.c  alignment_parameters.h  aln_controller.c  aln_controller.h  aln_mem.c  aln_mem.h  aln_profileprofile.c  aln_profileprofile.h  aln_run.c  aln_run.h  aln_seqprofile.c  aln_seqprofile.h  aln_seqseq.c  aln_seqseq.h  aln_setup.c  aln_setup.h  aln_struct.h  aln_task.c  aln_task.h  alphabet.c  alphabet.h  benchrunner.c  bisectingKmeans.c  bisectingKmeans.h  bpm.c  bpm.h  config.h  config.h.gch  config.h.in  create_run_cmds.c  create_run_kalign_diff_cmds.c  esl_stopwatch.c  (+40 more)
kalign/src/.deps/: alignment_parameters.Po  aln_controller.Po  aln_mem.Po  aln_profileprofile.Po  aln_run.Po  aln_seqprofile.Po  aln_seqseq.Po  aln_setup.Po  aln_task.Po  alphabet.Po  benchrunner.Po  bisectingKmeans.Po  bpm.Po  bpm.Tpo  create_run_cmds.Po  create_run_kalign_diff_cmds.Po  esl_stopwatch.Po  euclidean_dist.Po  idata.Po  libkalign.Po  misc.Po  parameters.Po  pick_anchor.Po  run_kalign.Po  rwalign.Po  sequence_distance.Po  sequence_distance.Tpo  test_lib.Po  time_and_score_aln.Po  tldevel.Po  tlmisc.Po  tlrng.Po  weave_alignment.Po
src/: CMakeLists.txt  consensus.cpp  consensus.h  dataset.cpp  dataset.h
test/: HG002.chr22.2k.bam  HG002.chr22.2k.bam.bai
